--- a/src/app/quizpage/quizpage.component.css
+++ b/src/app/quizpage/quizpage.component.css
@@ -4,7 +4,8 @@ main {
   align-items: center;
   flex-direction: column;
   height: calc(100vh - 60px);
-  background-image: linear-gradient(rgba(0, 0, 0, .2), rgba(0, 0, 0, .2)), url('../../assets/pokemon-nature-background-2.jpg');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    url("../../assets/pokemon-nature-background-2.jpg");
   background-size: cover;
   background-attachment: fixed;
   background-position: center bottom;
@@ -126,19 +127,15 @@ input[type="radio"]:checked + #answerChoiceLabel {
   margin-right: 5px;
 }
 
-
-
 #correctAnswer,
 #caughtAlert {
   padding: 10px;
   margin-top: 10px;
-
 }
 
 #caughtAlert {
   background: rgba(144, 238, 144, 0.712);
 }
-
 
 #correctAnswer {
   background: rgba(222, 73, 65, 0.712);
@@ -149,7 +146,6 @@ input[type="radio"]:checked + #answerChoiceLabel {
   margin: 0;
   font-weight: bold;
 }
-
 
 #answer {
   display: block;
@@ -192,7 +188,7 @@ input[type="radio"]:checked + #answerChoiceLabel {
     padding: 10px 15px;
   }
 
-  input[type=radio]:checked+#answerChoiceLabel {
+  input[type="radio"]:checked + #answerChoiceLabel {
     background: rgba(128, 128, 128, 0.692);
     padding: 10px 15px;
   }
