--- a/src/app/resultspage/resultspage.component.css
+++ b/src/app/resultspage/resultspage.component.css
@@ -1,4 +1,5 @@
 main {
+  height: 100vh;
   background-image: url("../../assets/ocean.png");
   background-size: cover;
   padding-top: 30px;
@@ -7,7 +8,10 @@ main {
 }
 
 .heading-container {
-  padding-top: 0;
+  margin-top: 40px;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
 }
 
 .pokemon-tiles {
@@ -16,9 +20,14 @@ main {
   border-radius: 10px;
   padding: 10px;
   margin: 15px;
-  box-shadow: 5px 5px 3px black;
+  box-shadow: 5px 10px 15px black;
+}
+
+section {
+  margin-top: 40px;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 h1,
